fix: change title class and change spacing and border radius

--- a/web/checkpoint 2/css/contato.scss
+++ b/web/checkpoint 2/css/contato.scss
@@ -14,14 +14,16 @@
 		margin: 60px auto;
 		background-color: rgba(255, 255, 255, 0.85);
 		border-bottom: solid 1px;
-		padding: 25px;
+		padding: 40px 25px;
+		border-radius: 12px;
 
-		.title {
-			margin: 30px auto 0;
+		.titulo {
+			text-align: center;
 			font-weight: bold;
 		}
-		.sub-title {
-			margin: 30px auto;
+		.sub-titulo {
+			text-align: center;
+			margin-bottom: 20px;
 		}
 		.formulario-contato {
 			display: flex;
@@ -52,7 +54,7 @@
 		.container-contato {
 			margin: 0;
 			width: 100%;
-			.sub-title h2 {
+			.sub-titulo h2 {
 				font-size: 1rem;
 			}
 		}
